# TinyNet

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.githooks/: prepare-commit-msg
acceptor/include/tinynet/: acceptor.hpp  i_acceptor_transport.hpp  tcp_acceptor_transport.hpp
acceptor/src/: acceptor.cpp  tcp_acceptor_transport.cpp
client/include/tinynet/: client.hpp  i_client_transport.hpp  tcp_client_transport.hpp
client/src/: client.cpp  tcp_client_transport.cpp
common/include/tinynet/: endpoint.hpp  sock_addr.hpp  socket.hpp  socket_factory.hpp  version.hpp
common/src/: endpoint.cpp  sock_addr.cpp  socket.cpp  socket_factory.cpp  version.cpp
examples/acceptor/: main.cpp
examples/client/: main.cpp
examples/server/: main.cpp
server/include/tinynet/: server.hpp
server/src/: server.cpp
